mdapi/objects/SalesCase__c.object
<CustomObject>
    <description>Used with partner onboarding process + Will provide functionality for future sales initiatives that require a start and stop tracking</description>
    <fields>
        <fullName>AcademyOnboarded__c</fullName>
        <label>Academy Onboarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>Selling Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>VAR</fullName>
                </value>
                <value>
                    <fullName>MSP and VAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master-Detail Relationship</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sales_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BuiltBDR__c</fullName>
        <label>Built BDR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sales_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscussedHowToMakeMoney__c</fullName>
        <label>Discussed how to make money</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiscussedRampOptions__c</fullName>
        <label>Discussed Ramp Options</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GenerateNFRKeys__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate NFR Keys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenerateNFRString__c</fullName>
        <formula>Account__r.Id &amp;&quot;;&quot;&amp; text(NFRLanguage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GenerateNFRString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstalledNFR__c</fullName>
        <label>Installed NFR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDFJointPME__c</fullName>
        <label>MDF Joint Planning/Marketing/Events</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSPOfferingCloudServices__c</fullName>
        <label>MSP Offering cloud services?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSPRevenueGreaterThan300__c</fullName>
        <label>MSP Revenue Greater than 300?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NFRLanguage__c</fullName>
        <label>NFR Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Portugal)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Chinese Traditional</fullName>
                </value>
                <value>
                    <fullName>Chinese Simplified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnsiteVisitContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onsite Visit Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sales_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OnsiteVisitDateTime__c</fullName>
        <label>Onsite Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunitiesInPipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently have opportunities in pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OtherAlliancePartnerOEM__c</fullName>
        <label>Other Alliance Partner / OEM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCompetitor__c</fullName>
        <label>Other Competitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherComponents__c</fullName>
        <label>Other Components</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherDistributor__c</fullName>
        <label>Other Distributor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPSA__c</fullName>
        <label>Other PSA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPurchaseMethod__c</fullName>
        <label>Other Purchase Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRMM__c</fullName>
        <label>Other RMM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSATool__c</fullName>
        <label>Do you use a PSA tool</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autotask</fullName>
                </value>
                <value>
                    <fullName>ConnectWise</fullName>
                </value>
                <value>
                    <fullName>Tigerpaw</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerNetworkDiscussion__c</fullName>
        <label>Partner Network Discussion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PartnerPortalWalkthrough__c</fullName>
        <label>Partner portal walkthrough</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreferredDemoContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Demo Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sales_Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreferredDistributor__c</fullName>
        <label>Preferred Distributor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D&amp;H Distributing</fullName>
                </value>
                <value>
                    <fullName>Lifeboat</fullName>
                </value>
                <value>
                    <fullName>Synnex</fullName>
                </value>
                <value>
                    <fullName>Tech Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreferredOEMAlliancePartner__c</fullName>
        <label>Preferred AlliancePartner / OEM</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ConnectWise (Labtech)</fullName>
                </value>
                <value>
                    <fullName>SolarWinds (N-Able)</fullName>
                </value>
                <value>
                    <fullName>Kaseya</fullName>
                </value>
                <value>
                    <fullName>ESET</fullName>
                </value>
                <value>
                    <fullName>Datto</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PricingCalculator__c</fullName>
        <label>Pricing Calculator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductDemoDateTime__c</fullName>
        <label>Product Demo Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PurchasePreference__c</fullName>
        <label>Preferred Methods Of Purchase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner / OEM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMMTool__c</fullName>
        <label>Do you use a RMM tool</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kaseya</fullName>
                </value>
                <value>
                    <fullName>LabTech</fullName>
                </value>
                <value>
                    <fullName>Level Platforms</fullName>
                </value>
                <value>
                    <fullName>N-Able</fullName>
                </value>
                <value>
                    <fullName>PacketTrap</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RampEndDate__c</fullName>
        <label>Ramp End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RampSignedMSP__c</fullName>
        <label>Ramp Signed MSP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RampStartDate__c</fullName>
        <label>Ramp Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReferralSource__c</fullName>
        <label>How did you hear about StorageCraft?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Other search engine</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Magazine / Advertising</fullName>
                </value>
                <value>
                    <fullName>Attended Webinar</fullName>
                </value>
                <value>
                    <fullName>Used StorageCraft through OEM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendWelcomeLetter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Welcome Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StorageCraftExperienceLevel__c</fullName>
        <label>StorageCraft Product Experience Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StructuredMSPSLA__c</fullName>
        <label>Structured MSP SLA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechnicalSupportProcess__c</fullName>
        <label>Technical Support Process</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrainingCompleted__c</fullName>
        <label>Training Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrainingOnsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Training Onsite?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utilized_Components__c</fullName>
        <label>Utilized Components</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>ShadowControl</fullName>
                </value>
                <value>
                    <fullName>GRE</fullName>
                </value>
                <value>
                    <fullName>ImageManager</fullName>
                </value>
                <value>
                    <fullName>VirtualBoot</fullName>
                </value>
                <value>
                    <fullName>RE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>competitiveExperience__c</fullName>
        <label>Experience with competitive products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Veeam</fullName>
                </value>
                <value>
                    <fullName>Acronis</fullName>
                </value>
                <value>
                    <fullName>Appassure</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Unitrends</fullName>
                </value>
                <value>
                    <fullName>STC OEM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>referralSourceDetails__c</fullName>
        <label>Referral Details</label>
        <type>TextArea</type>
    </fields>
    <label>Sales Stage</label>
    <nameField>
        <label>Sales Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Stages</pluralLabel>
    <recordTypes>
        <fullName>Grow_Your_Partner</fullName>
        <active>true</active>
        <label>Grow Your Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Onboarding_Stage_1</fullName>
        <active>true</active>
        <label>Know Your Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Onboarding_Stage_2</fullName>
        <active>true</active>
        <label>Enable Your Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>X7_16_MSP_Contract</fullName>
        <active>true</active>
        <label>7-16 MSP Contract</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Competitive_Experience</fullName>
        <active>true</active>
        <description>If Competitive Experience includes &apos;Other&apos; - Require Other Competitor</description>
        <errorConditionFormula>AND( 
INCLUDES( competitiveExperience__c , &quot;Other&quot;), 
ISBLANK( OtherCompetitor__c ))</errorConditionFormula>
        <errorDisplayField>OtherCompetitor__c</errorDisplayField>
        <errorMessage>Other Competitor must be completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Onsite_Visit</fullName>
        <active>true</active>
        <description>When Status = Complete &gt; Onsite Visit Date and Onsite Visit Contact must be populated</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Complete&quot;),
RecordType.Id = &quot;012360000017HGu&quot;,
ISBLANK(OnsiteVisitDateTime__c),
ISBLANK(OnsiteVisitContact__c)
)</errorConditionFormula>
        <errorMessage>Onsite Visit Date and Onsite Visit Contact fields must be completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSA_Other</fullName>
        <active>true</active>
        <description>If PSATool includes &apos;Other&apos; - require OtherPSA</description>
        <errorConditionFormula>AND(
INCLUDES( PSATool__c , &quot;Other&quot;),
ISBLANK( OtherPSA__c ))</errorConditionFormula>
        <errorDisplayField>OtherPSA__c</errorDisplayField>
        <errorMessage>Other PSA must be completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_Distributor_Other</fullName>
        <active>true</active>
        <description>If preferred distributor includes other other distributor cannot be null.</description>
        <errorConditionFormula>and( INCLUDES(  PreferredDistributor__c , &quot;Other&quot;) ,isblank(  OtherDistributor__c ))</errorConditionFormula>
        <errorDisplayField>OtherDistributor__c</errorDisplayField>
        <errorMessage>If preferred distributor inlcudes &quot;Other&quot; other distributor cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_Method_Other</fullName>
        <active>true</active>
        <description>If Preferred Purchase Method other and other method is null</description>
        <errorConditionFormula>and( INCLUDES( PurchasePreference__c , &quot;Other&quot;) ,isblank( OtherPurchaseMethod__c ))</errorConditionFormula>
        <errorDisplayField>OtherPurchaseMethod__c</errorDisplayField>
        <errorMessage>If purchase method includes &quot;Other&quot; other purchase method field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_method_Alliance</fullName>
        <active>true</active>
        <description>If preferred purchase method includes alliance, preferred disti cannot be null</description>
        <errorConditionFormula>AND(includes(PurchasePreference__c,&quot;Alliance Partner / OEM&quot;), isnull( PreferredOEMAlliancePartner__c ))</errorConditionFormula>
        <errorDisplayField>PreferredOEMAlliancePartner__c</errorDisplayField>
        <errorMessage>If preferred purchase method includes alliance partner, preferred alliance partner cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_method_disti</fullName>
        <active>true</active>
        <description>If preferred purchase method includes disti, preferred disti cannot be null</description>
        <errorConditionFormula>AND(includes(PurchasePreference__c,&quot;Distributor&quot;), isnull(PreferredDistributor__c))</errorConditionFormula>
        <errorDisplayField>PreferredDistributor__c</errorDisplayField>
        <errorMessage>If preferred purchase method includes distributor, preferred distributor cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preffered_Alliance_Partner_Other</fullName>
        <active>true</active>
        <description>If preferred alliance partner includes &quot;Other&quot; other alliance partner cannot be null</description>
        <errorConditionFormula>and( INCLUDES(  PreferredOEMAlliancePartner__c , &quot;Other&quot;) ,isblank(  OtherAlliancePartnerOEM__c ))</errorConditionFormula>
        <errorDisplayField>OtherAlliancePartnerOEM__c</errorDisplayField>
        <errorMessage>If preferred alliance partner inlcudes &quot;Other&quot; other alliance partner cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Demo_DateTime_and_Demo_Contact</fullName>
        <active>true</active>
        <description>If either Product Demo Date/Time or Product Demo Contact is populated and the other is empty it requires the other</description>
        <errorConditionFormula>AND(
(NOT(ISBLANK(PreferredDemoContact__c)) &amp;&amp;
ISBLANK(ProductDemoDateTime__c))
||
(NOT(ISBLANK(ProductDemoDateTime__c)) &amp;&amp;
ISBLANK(PreferredDemoContact__c))
)</errorConditionFormula>
        <errorMessage>Both Product Demo/Date &amp; Product Demo Contact must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RMM_Tool</fullName>
        <active>true</active>
        <description>If RMMTool includes &apos;Other&apos; - require Other RMM</description>
        <errorConditionFormula>AND( 
INCLUDES( RMMTool__c , &quot;Other&quot;), 
ISBLANK( OtherRMM__c ))</errorConditionFormula>
        <errorDisplayField>OtherRMM__c</errorDisplayField>
        <errorMessage>Other RMM must be completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ramp_Signed_MSP_Dates_Required</fullName>
        <active>true</active>
        <description>If RampSignedMSP is populated, RampStartDate and RampEndDate are required</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(RampSignedMSP__c)), 
OR(
ISBLANK(RampStartDate__c),
ISBLANK(RampEndDate__c)
))</errorConditionFormula>
        <errorMessage>Please complete the Ramp Start Date and Ramp End Date fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referral_Source</fullName>
        <active>true</active>
        <description>If Referral Source != Google &gt; Require referral details</description>
        <errorConditionFormula>AND(
INCLUDES( ReferralSource__c , &quot;Google&quot;),
ISBLANK( referralSourceDetails__c  ))</errorConditionFormula>
        <errorDisplayField>referralSourceDetails__c</errorDisplayField>
        <errorMessage>Referral Details must be completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Utilized_Components_Other_Components</fullName>
        <active>true</active>
        <description>If Utilized Components includes &apos;Other,&apos; Other Components is required</description>
        <errorConditionFormula>AND( 
INCLUDES( Utilized_Components__c , &quot;Other&quot;), 
ISBLANK( OtherComponents__c  ))</errorConditionFormula>
        <errorDisplayField>OtherComponents__c</errorDisplayField>
        <errorMessage>The Other Components field is required.</errorMessage>
    </validationRules>
</CustomObject>